default config file

--- a/tildewiki.yaml
+++ b/tildewiki.yaml
@@ -4,8 +4,10 @@ ShortDesc: "Wiki for the Tildeverse"
 Icon: "index/icon.png"
 Port: 8080
 CSS: "index/wiki.css"
+IndexDir: "index"
 Index: "index/wiki.md"
-PageDir: "pages/"
-TmplDir: "templates/"
-IndexDir: "index/"
+PageDir: "pages"
+PageTmpl: "template.md"
+TmplDir: "templates"
 ValidPath: "^/(edit|save|w)/([a-zA-Z0-9]+)$"
+ViewPath: "w"
