temporarily adding pretty remote css

--- a/tildewiki.yaml
+++ b/tildewiki.yaml
@@ -3,7 +3,8 @@ Separator: "::"
 ShortDesc: "Wiki for the Tildeverse"
 Icon: "index/icon.png"
 Port: 8080
-CSS: "index/wiki.css"
+#CSS: "index/wiki.css"
+CSS: "https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/dark.css"
 IndexDir: "index"
 Index: "index/wiki.md"
 PageDir: "pages"
