--- a/tildewiki.yaml
+++ b/tildewiki.yaml
@@ -1,19 +1,55 @@
+# This config file can live at the following places, in descending
+# order. The first one found wins, the next locations are ignored 
+# even if the file exists there too.
+#
+#/usr/local/etc/
+# /etc/
+# $HOME/.tildewiki/
+# ./
+#
+# The config file must be called `tildewiki.yaml`
+# I'll make this configurable by a command line flag later
+
+
+# The port for the service to bind to.
+# Tildewiki will bind to localhost.
 Port: 8080
 
+# The name of the wiki
 Name: "Tildewiki"
+# Used in the <title> tag between name and description
 Separator: "::"
+# Little blurb for the <title> tag
 ShortDesc: "Wiki for the Tildeverse"
+#Location of the CSS file. Can be a relative, absolute, or remote path
 #CSS: "index/wiki.css"
 CSS: "https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/dark.css"
 
+
+# IndexDir holds some of the configuration files
+# Like the `index` markdown document (front page), the error pages,
+# the icon / favicon, etc.
 IndexDir: "index"
+# Use the file name, not the full path for these two
 Index: "wiki.md"
 Icon: "icon.png"
 
+
+# PageDir holds the actual content pages for the wiki
 PageDir: "pages"
+# PageTmpl is provided to the user when creating a new wiki page
 PageTmpl: "template.md"
 
+
+# Directory for the `edit page` template/form
 TmplDir: "templates"
 
+
+# Regex to validate the URLs. You probably don't want to change this.
 ValidPath: "^/(edit|save|w)/([a-zA-Z0-9]+)$"
+# URL path used to delineate the wiki pages.
+# The default is "w", which would appear publicly as:
+# example.com/w/wikipagename
 ViewPath: "w"
+
+
