--- a/tildewiki.yaml
+++ b/tildewiki.yaml
@@ -22,7 +22,6 @@ Separator: "::"
 # Little blurb for the <title> tag
 ShortDesc: "Wiki for the Tildeverse"
 #Location of the CSS file. Can be a relative, absolute, or remote path
-#CSS: "index/wiki.css"
 CSS: "https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/dark.css"
 
 
@@ -32,8 +31,9 @@ CSS: "https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/dark.css"
 IndexDir: "index"
 # Use the file name, not the full path
 Index: "wiki.md"
-# Again, just the file name. Currently, must be PNG.
+# Again, just the file name. Currently, must be PNG, JPEG, or GIF.
 Icon: "icon.png"
+
 # PageDir holds the actual content pages for the wiki
 PageDir: "pages"
 
