travis hook for goreleaser

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,20 @@ language: go
 go:
 - 1.11.x
 - 1.12.x
+
+addons:
+  apt:
+    packages:
+      - rpm
+      - deb
+
+        #services:
+        #- docker
+
+deploy:
+- provider: script
+  skip_cleanup: true
+  script: curl -sL https://git.io/goreleaser | bash
+  on:
+    tags: true
+    condition: $TRAVIS_OS_NAME = linux
