--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,18 @@ go:
 - 1.11.x
 - 1.12.x
 
-addons:
-  apt:
-    packages:
-      - rpm
+  #addons:
+  #apt:
+  #packages:
+  #   - rpm
 
         #services:
         #- docker
 
-deploy:
-- provider: script
-  skip_cleanup: true
-  script: curl -sL https://git.io/goreleaser | bash
-  on:
-    tags: true
-    condition: $TRAVIS_OS_NAME = linux
+  #deploy:
+  #- provider: script
+  #skip_cleanup: true
+  #script: curl -sL https://git.io/goreleaser | bash
+  #on:
+  #tags: true
+  #condition: $TRAVIS_OS_NAME = linux
