added macOS 10.13 build

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,11 @@ go:
 - 1.11.x
 - 1.12.x
 
+os:
+  - linux
+  - osx
+
 dist: xenial
 
-  #addons:
-  #apt:
-  #packages:
-  #   - rpm
-
-        #services:
-        #- docker
-
-  #deploy:
-  #- provider: script
-  #skip_cleanup: true
-  #script: curl -sL https://git.io/goreleaser | bash
-  #on:
-  #tags: true
-  #condition: $TRAVIS_OS_NAME = linux
+env:
+  - GO111MODULE=on
